[package]
name = "tower-quest"
version = "0.0.0"
license = "GPL-3.0-or-later"
repository = "https://github.com/kayhhh/tower-quest"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[lints.clippy]
type_complexity = "allow"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true

[profile.wasm-release]
inherits = "release"
opt-level = 'z'

[dependencies]
bevy = "0.12.1"
bevy_round_ui = "0.1.1"
rand = "0.8.5"
rand_distr = "0.4.3"
